name:                  vivav
version:               0.1.0.0
-- synopsis:              
-- description:           
license:               BSD3
license-file:          LICENSE
author:                Daniel Diaz
maintainer:            diaz.carrete@facebook.com
-- copyright:             
category:              Editor
build-type:            Simple
extra-source-files:    ChangeLog.md
cabal-version:         >=1.10

executable vivav
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base                 >= 4.9 && <4.10,
                       aeson                >= 0.11.2 && < 0.12,
                       bytestring           >= 0.10.8 && < 0.11,
                       containers           >= 0.5.7 && < 0.6,
                       text                 >= 1.2.2 && < 1.3,
                       transformers         >= 0.5.2 && < 0.6,
                       async                >= 2.1.0 && < 2.2,
                       directory            >= 1.2.6 && < 1.3,
                       filepath             >= 1.4.1 && < 1.5,
                       lens                 >= 4.14 && < 4.15,
                       megaparsec           >= 5.0.1 && < 5.1,
                       pipes                >= 4.1.9 && < 4.2,
                       -- http://hackage.haskell.org/package/pipes-aeson-0.4.1.6/docs/Pipes-Aeson.html 
                       pipes-aeson          >= 0.4.1 && < 0.5,
                       -- http://hackage.haskell.org/package/network-2.6.3.1/docs/Network.html
                       network              >= 2.6.3 && < 2.7,
                       -- http://hackage.haskell.org/package/optparse-applicative 
                       optparse-applicative >= 0.13.0 && < 0.14,
                       pipes-text           >= 0.0.2 && < 0.1,
                       pipes-bytestring     >= 2.1.3 && < 2.2

                
  hs-source-dirs:      src
  default-language:    Haskell2010
